--- a/static/src/components/feed/_feed.scss
+++ b/static/src/components/feed/_feed.scss
@@ -1,7 +1,9 @@
 .feed {
-  margin-bottom: rem(48);
-  @include media-breakpoint-up(1200) {
-    margin-bottom: rem(72);
+  &:not(:last-child) {
+    margin-bottom: rem(48);
+    @include media-breakpoint-up(1200) {
+      margin-bottom: rem(72);
+    }
   }
   > li {
     &:not(:last-child) {
